Partial MFC r309300:

Apply fix for libarchive issue #821:
  "tar -P" cannot extract hardlinks through symlinks

PR:		213255
Reported by:	Tijl Coosemans <tilj@FreeBSD.org>

Former-commit-id: b578d90285f54320e27c4f6d131c73b0049a7a23